# nvim_rust_gameoflife

./: .gitignore  Cargo.toml  README.md
lua/gameoflife/: init.lua
src/: main.rs
src/internal/: app_handler.rs  game_handler.rs  handler.rs  pingpong_handler.rs
