[package]
name = "gameoflife_rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
rmpv = "1.3.0"
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
async-trait = "0.1" # <-- ADD OR ENSURE THIS LINE IS PRESENT
rand = "0.9.1"
